--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,11 @@ Jinja2==2.11.2
 MarkupSafe==1.1.1
 numpy==1.19.4
 pandas==1.1.5
+psycopg2-binary==2.8.6
 python-dateutil==2.8.1
 pytz==2020.4
 six==1.15.0
+SQLAlchemy==1.3.23
 visitor==0.1.3
 Werkzeug==1.0.1
 WTForms==2.3.3
